--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
+    "@livekit/components-react": "^2.4.3",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "livekit-client": "^2.5.1",
+    "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-themes": "^0.3.0",
