--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.0.0",
     "livekit-client": "^2.5.1",
     "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.344.0",
@@ -27,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.41",
+    "string-to-color": "^2.2.2",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
