--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
     "@livekit/components-react": "^2.4.3",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@uploadthing/react": "^7.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.0.0",
+    "jwt-decode": "^4.0.0",
     "livekit-client": "^2.5.1",
     "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.344.0",
